option('backend-name', type : 'combo', choices : ['alpm', 'aptcc', 'dnf', 'dummy', 'entropy', 'pisi', 'poldek', 'portage', 'ports', 'slack', 'urpmi', 'yum', 'zypp', 'nix'], value : 'dummy', description : 'The name of the backend to use')
option('dnf-vendor', type : 'combo', choices : ['fedora', 'mageia', 'openmandriva'], value : 'fedora', description : 'Vendor configuration when using the dnf backend')
option('systemd', type : 'boolean', value : true, description : 'Use systemd and logind')
option('systemd-system-unit', type : 'string', value : '', description : 'Directory for systemd service files')
option('offline-update', type : 'boolean', value : true, description : 'Use systemd offline update')
option('elogind', type : 'boolean', value : false, description : 'Use elogind instead of systemd-login')
option('gobject-introspection', type : 'boolean', value : true, description : 'Build GObject Introspection data')
option('man-pages', type : 'boolean', value : true, description : 'Generate man pages')
option('bash-completion', type : 'boolean', value : true, description : 'Bash completion')
option('bash-command-not-found', type : 'boolean', value : true, description : 'Build Bash command-not-found functionality')
option('packagekit-user', type : 'string', value : 'root', description : 'User for running the PackageKit daemon')
option('local-checkout', type : 'boolean', value : false, description : 'Allow running in local checkout')
option('gstreamer-plugin', type : 'boolean', value : true, description : 'Build gstreamer plugin functionality')
option('gtk-module', type : 'boolean', value : true, description : 'Build GTK+-3 module functionality')
option('cron', type : 'boolean', value : true, description : 'Build cron background functionality')
option('dbus-sys', type : 'string', value : '', description : 'D-BUS system.d directory')
option('dbus-services', type : 'string', value : '', description : 'D-BUS system-services directory')
option('python-backend', type : 'boolean', value : true, description : 'Provide a python backend')
option('python-package-dir', type : 'string', value : '', description : 'Location for python modules')
